--- a/index.html
+++ b/index.html
@@ -13,107 +13,142 @@
 </head>
 <body>
 
-  <!-- Sidebar start -->
+<div class="wrapper" id="app">
 
-  Step 1
-  Your info
+ <div class="main">
 
-  Step 2
-  Select plan
+  <div class="main__steps" id="steps">
+    <div class="step__box"></div> <!-- appendSteps-->
+  </div>
 
-  Step 3
-  Add-ons
 
-  Step 4
-  Summary
+  <div class="main__cards" id="cards">
 
-  <!-- Sidebar end -->
+  <div class="card info hide" data-step="info">
+   <div class="card__info">
+    <h1 class="title">Personal info</h1>
+    <p class="title__sub">Please provide your name, email address, and phone number</p>
+   </div>
 
-  <!-- Step 1 start -->
+   <div class="card__info__contact">
+    <label for="name"> Name <input type="text" id="name" name="name" placeholder="e.g. Stephen King"></label>
+    <label for="email"> Email Address<input type="email" name="email" id="email" placeholder=" e.g. stephenking@lorem.com"></label>
+    <label for="phone">Phone Number <input type="number" name="phone" id="phone" placeholder="e.g. +1 234 567 890"></label>
+   </div>
 
-  Personal info
-  Please provide your name, email address, and phone number.
+   <div class="card__btn">
+    <button class="btn next">Next step</button>
+   </div>
 
-  Name
-  e.g. Stephen King
+  </div>
 
-  Email Address
-  e.g. stephenking@lorem.com
+  <div class="card plan" data-step="plan">
 
-  Phone Number
-  e.g. +1 234 567 890
+    <div class="card__info">
+      <h1 class="title">Select your plan</h1>
+      <p class="title__sub">You have the option of monthly or yearly billing.</p>
+     </div>
 
-  Next Step
+     <div class="card__plan">
+      <div class="card__plan__select"></div>
 
-  <!-- Step 1 end -->
+      <div class="card__plan__toggle" data-select>
+        <div>
+          <span>Monthly</span>
+          <button class="toggle"></button> 
+          <span>yearly</span>
+            </div>
+      </div>
+     </div>
 
-  <!-- Step 2 start -->
+     <div class="card__btn">
+      <button class="btn prev">Go Back</button>
+      <button class="btn next">Next step</button>
+      <span class="load"></span>
+     </div>
+  </div>
 
-  Select your plan
-  You have the option of monthly or yearly billing.
+  <div class="card hide" data-step="pick"></div>
 
-  Arcade
-  $9/mo
+  <div class="card hide" data-step="summary"></div>
 
-  Advanced
-  $12/mo
+  </div>
+ </div>
 
-  Pro
-  $15/mo
+</div>
 
-  Monthly
-  Yearly
+<div class="hide">
 
-  Go Back
-  Next Step
+ <!-- Step 2 start -->
 
-  <!-- Step 2 end -->
+ Select your plan
+ You have the option of monthly or yearly billing.
 
-  <!-- Step 3 start -->
+ Arcade
+ $9/mo
 
-  Pick add-ons
-  Add-ons help enhance your gaming experience.
+ Advanced
+ $12/mo
 
-  Online service
-  Access to multiplayer games
-  +$1/mo
+ Pro
+ $15/mo
 
-  Larger storage
-  Extra 1TB of cloud save
-  +$2/mo
+ Monthly
+ Yearly
 
-  Customizable Profile
-  Custom theme on your profile
-  +$2/mo
+ Go Back
+ Next Step
 
-  Go Back
-  Next Step
+ <!-- Step 2 end -->
 
-  <!-- Step 3 end -->
+ <!-- Step 3 start -->
 
-  <!-- Step 4 start -->
+ Pick add-ons
+ Add-ons help enhance your gaming experience.
 
-  Finishing up
-  Double-check everything looks OK before confirming.
+ Online service
+ Access to multiplayer games
+ +$1/mo
 
-  <!-- Dynamically add subscription and add-on selections here -->
+ Larger storage
+ Extra 1TB of cloud save
+ +$2/mo
 
-  Total (per month/year)
+ Customizable Profile
+ Custom theme on your profile
+ +$2/mo
 
-  Go Back
-  Confirm
+ Go Back
+ Next Step
 
-  <!-- Step 4 end -->
+ <!-- Step 3 end -->
 
-  <!-- Step 5 start -->
+ <!-- Step 4 start -->
 
-  Thank you!
+ Finishing up
+ Double-check everything looks OK before confirming.
 
-  Thanks for confirming your subscription! We hope you have fun 
-  using our platform. If you ever need support, please feel free 
-  to email us at support@loremgaming.com.
+ <!-- Dynamically add subscription and add-on selections here -->
 
-  <!-- Step 5 end -->
+ Total (per month/year)
+
+ Go Back
+ Confirm
+
+ <!-- Step 4 end -->
+
+ <!-- Step 5 start -->
+
+ Thank you!
+
+ Thanks for confirming your subscription! We hope you have fun 
+ using our platform. If you ever need support, please feel free 
+ to email us at support@loremgaming.com.
+
+ <!-- Step 5 end -->
+</div>
+
+ 
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
