doing what we know best

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="wrapper" id="app">
 
- <div class="main">
+ <div class="main" id="main">
 
   <div class="main__steps" id="steps">
     <div class="step__box"></div> <!-- appendSteps-->
@@ -54,17 +54,16 @@
 
       <div class="card__plan__toggle" data-select>
         <div>
-          <span>Monthly</span>
+          <button class="btn prev">Monthly</button>
           <button class="toggle"></button> 
-          <span>yearly</span>
+          <button class="btn prev">yearly</button>
             </div>
       </div>
      </div>
 
-     <div class="card__btn">
+     <div class="card__btn two">
       <button class="btn prev">Go Back</button>
       <button class="btn next">Next step</button>
-      <span class="load"></span>
      </div>
   </div>
 
