--- a/index.html
+++ b/index.html
@@ -1,160 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
-  
-  <title>multi-step-form by Nonso01</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/images/favicon-32x32.png"
+    />
 
-  
-<link rel="stylesheet" href="/dist/main.css">
-</head>
-<body>
+    <title>multi-step-form by Nonso01</title>
 
-<div class="wrapper" id="app">
+    <link rel="stylesheet" href="/dist/main.css" />
+  </head>
+  <body>
+    <div class="wrapper" id="app">
+      <div class="main" id="main">
+        <div class="main__steps" id="steps">
+          <div class="step__box"></div>
+          <!-- appendSteps-->
+        </div>
 
- <div class="main" id="main">
-
-  <div class="main__steps" id="steps">
-    <div class="step__box"></div> <!-- appendSteps-->
-  </div>
-
-
-  <div class="main__cards" id="cards">
-
-  <div class="card info hide" data-step="info">
-   <div class="card__info">
-    <h1 class="title">Personal info</h1>
-    <p class="title__sub">Please provide your name, email address, and phone number</p>
-   </div>
-
-   <div class="card__info__contact">
-    <label for="name"> Name <input type="text" id="name" name="name" placeholder="e.g. Stephen King"></label>
-    <label for="email"> Email Address<input type="email" name="email" id="email" placeholder=" e.g. stephenking@lorem.com"></label>
-    <label for="phone">Phone Number <input type="number" name="phone" id="phone" placeholder="e.g. +1 234 567 890"></label>
-   </div>
-
-   <div class="card__btn">
-    <button class="btn next">Next step</button>
-   </div>
-
-  </div>
-
-  <div class="card plan" data-step="plan">
-
-    <div class="card__info">
-      <h1 class="title">Select your plan</h1>
-      <p class="title__sub">You have the option of monthly or yearly billing.</p>
-     </div>
-
-     <div class="card__plan">
-      <div class="card__plan__select"></div>
-
-      <div class="card__plan__toggle" data-select>
-        <div>
-          <button class="btn prev">Monthly</button>
-          <button class="toggle"></button> 
-          <button class="btn prev">yearly</button>
+        <div class="main__cards" id="cards">
+          <div class="card info hide" data-step="info">
+            <div class="card__info">
+              <h1 class="title">Personal info</h1>
+              <p class="title__sub">
+                Please provide your name, email address, and phone number
+              </p>
             </div>
+
+            <div class="card__info__contact">
+              <label for="name">
+                Name
+                <input
+                  type="text"
+                  id="name"
+                  name="name"
+                  placeholder="e.g. Stephen King"
+              /></label>
+              <label for="email">
+                Email Address<input
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder=" e.g. stephenking@lorem.com"
+              /></label>
+              <label for="phone"
+                >Phone Number
+                <input
+                  type="number"
+                  name="phone"
+                  id="phone"
+                  placeholder="e.g. +1 234 567 890"
+              /></label>
+            </div>
+
+            <div class="card__btn">
+              <button class="btn next">Next step</button>
+            </div>
+          </div>
+
+          <div class="card plan" data-step="plan">
+            <div class="card__info">
+              <h1 class="title">Select your plan</h1>
+              <p class="title__sub">
+                You have the option of monthly or yearly billing.
+              </p>
+            </div>
+
+            <div class="card__plan">
+              <div class="card__plan__select"></div>
+
+              <div class="card__plan__toggle" data-select>
+                <div>
+                  <button class="btn prev">Monthly</button>
+                  <button class="toggle"></button>
+                  <button class="btn prev">yearly</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="card__btn two">
+              <button class="btn prev">Go Back</button>
+              <button class="btn next">Next step</button>
+            </div>
+          </div>
+
+          <div class="card hide" data-step="pick"></div>
+
+          <div class="card hide" data-step="summary"></div>
+        </div>
       </div>
-     </div>
+    </div>
 
-     <div class="card__btn two">
-      <button class="btn prev">Go Back</button>
-      <button class="btn next">Next step</button>
-     </div>
-  </div>
+    <div class="hide">
+      <!-- Step 2 start -->
 
-  <div class="card hide" data-step="pick"></div>
+      Select your plan You have the option of monthly or yearly billing. Arcade
+      $9/mo Advanced $12/mo Pro $15/mo Monthly Yearly Go Back Next Step
 
-  <div class="card hide" data-step="summary"></div>
+      <!-- Step 2 end -->
 
-  </div>
- </div>
+      <!-- Step 3 start -->
 
-</div>
+      Pick add-ons Add-ons help enhance your gaming experience. Online service
+      Access to multiplayer games +$1/mo Larger storage Extra 1TB of cloud save
+      +$2/mo Customizable Profile Custom theme on your profile +$2/mo Go Back
+      Next Step
 
-<div class="hide">
+      <!-- Step 3 end -->
 
- <!-- Step 2 start -->
+      <!-- Step 4 start -->
 
- Select your plan
- You have the option of monthly or yearly billing.
+      Finishing up Double-check everything looks OK before confirming.
 
- Arcade
- $9/mo
+      <!-- Dynamically add subscription and add-on selections here -->
 
- Advanced
- $12/mo
+      Total (per month/year) Go Back Confirm
 
- Pro
- $15/mo
+      <!-- Step 4 end -->
 
- Monthly
- Yearly
+      <!-- Step 5 start -->
 
- Go Back
- Next Step
+      Thank you! Thanks for confirming your subscription! We hope you have fun
+      using our platform. If you ever need support, please feel free to email us
+      at support@loremgaming.com.
 
- <!-- Step 2 end -->
+      <!-- Step 5 end -->
+    </div>
 
- <!-- Step 3 start -->
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div>
 
- Pick add-ons
- Add-ons help enhance your gaming experience.
-
- Online service
- Access to multiplayer games
- +$1/mo
-
- Larger storage
- Extra 1TB of cloud save
- +$2/mo
-
- Customizable Profile
- Custom theme on your profile
- +$2/mo
-
- Go Back
- Next Step
-
- <!-- Step 3 end -->
-
- <!-- Step 4 start -->
-
- Finishing up
- Double-check everything looks OK before confirming.
-
- <!-- Dynamically add subscription and add-on selections here -->
-
- Total (per month/year)
-
- Go Back
- Confirm
-
- <!-- Step 4 end -->
-
- <!-- Step 5 start -->
-
- Thank you!
-
- Thanks for confirming your subscription! We hope you have fun 
- using our platform. If you ever need support, please feel free 
- to email us at support@loremgaming.com.
-
- <!-- Step 5 end -->
-</div>
-
- 
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-
-
-  <script src="/src/js/main.js"></script>
-</body>
+    <script src="/src/js/main.js"></script>
+  </body>
 </html>
