--- a/index.html
+++ b/index.html
@@ -140,6 +140,6 @@
       >. Coded by <a href="#">Your Name Here</a>.
     </div>
 
-    <script src="/src/js/main.js"></script>
+    <script src="/dist/main.js"></script>
   </body>
 </html>
