moved to typescript, and am currently working on the logics

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
 
             <div class="card__btn">
-              <button class="btn next">Next step</button>
+              <button class="btn next navBtn">Next step</button>
             </div>
           </div>
 
@@ -77,16 +77,16 @@
 
               <div class="card__plan__toggle" data-select>
                 <div>
-                  <button class="btn prev">Monthly</button>
+                  <button class="btn time month choice">Monthly</button>
                   <button class="toggle"></button>
-                  <button class="btn prev">yearly</button>
+                  <button class="btn time year">yearly</button>
                 </div>
               </div>
             </div>
 
             <div class="card__btn two">
-              <button class="btn prev">Go Back</button>
-              <button class="btn next">Next step</button>
+              <button class="btn prev navBtn">Go Back</button>
+              <button class="btn next navBtn">Next step</button>
             </div>
           </div>
 
