made reasonable improvements on my logics and was able to do what i viewed as taugh all alone

--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
       href="/assets/images/favicon-32x32.png"
     />
 
-    <title>multi-step-form by Nonso01</title>
+    <title>multi-step-form by nonso01</title>
 
     <link rel="stylesheet" href="/dist/main.css" />
   </head>
   <body>
     <div class="wrapper" id="app">
+
       <div class="main" id="main">
+
         <div class="main__steps" id="steps">
           <div class="step__box"></div>
           <!-- appendSteps-->
         </div>
 
         <div class="main__cards" id="cards">
+          <div class="load hide"></div>
+
           <div class="card info hide" data-step="info">
             <div class="card__info">
               <h1 class="title">Personal info</h1>
@@ -64,7 +68,7 @@
             </div>
           </div>
 
-          <div class="card plan" data-step="plan">
+          <div class="card plan hide" data-step="plan">
             <div class="card__info">
               <h1 class="title">Select your plan</h1>
               <p class="title__sub">
@@ -90,43 +94,59 @@
             </div>
           </div>
 
-          <div class="card hide" data-step="pick"></div>
+          <div class="card pick hide" data-step="pick">
+            <div class="card__info">
+              <h1 class="title">Pick add-ons</h1>
+              <p class="title__sub">
+                Add-ons help enhance your gaming experience.
+              </p>
+            </div>
 
-          <div class="card hide" data-step="summary"></div>
+            <div class="card__pick"></div>
+
+            <div class="card__btn two">
+              <button class="btn prev navBtn">Go Back</button>
+              <button class="btn next navBtn">Next step</button>
+            </div>
+          </div>
+
+          <div class="card summary" data-step="summary">
+            <div class="card__info">
+              <h1 class="title">Finishing up</h1>
+              <p class="title__sub">
+                Double-check everything looks OK before confirming.
+              </p>
+            </div>
+
+            <div class="card__summary">
+              <div class="card__summary__confirm">
+
+
+              </div>
+
+              <div class="at-end">
+                <span class="title__sub total">Total (per year)</span>
+                 <h2 class="sum">$120/yr</h2>
+                </div>
+            </div>
+
+            <div class="card__btn two">
+              <button class="btn prev navBtn">Go Back</button>
+              <button class="btn end navBtn">Confirm</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="hide">
-      <!-- Step 2 start -->
-
-      Select your plan You have the option of monthly or yearly billing. Arcade
-      $9/mo Advanced $12/mo Pro $15/mo Monthly Yearly Go Back Next Step
-
-      <!-- Step 2 end -->
-
-      <!-- Step 3 start -->
-
-      Pick add-ons Add-ons help enhance your gaming experience. Online service
-      Access to multiplayer games +$1/mo Larger storage Extra 1TB of cloud save
-      +$2/mo Customizable Profile Custom theme on your profile +$2/mo Go Back
-      Next Step
-
-      <!-- Step 3 end -->
-
-      <!-- Step 4 start -->
-
-      Finishing up Double-check everything looks OK before confirming.
-
-      <!-- Dynamically add subscription and add-on selections here -->
-
-      Total (per month/year) Go Back Confirm
+      
 
       <!-- Step 4 end -->
 
       <!-- Step 5 start -->
 
-      Thank you! Thanks for confirming your subscription! We hope you have fun
+      <!-- Thank you! Thanks for confirming your subscription! We hope you have fun -->
       using our platform. If you ever need support, please feel free to email us
       at support@loremgaming.com.
 
@@ -137,7 +157,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://github.com/nonso01">nonso martin</a>.
     </div>
 
     <script src="/dist/main.js"></script>
