working on media queries

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   </head>
   <body>
     <div class="wrapper" id="app">
-
       <div class="main" id="main">
-
         <div class="main__steps" id="steps">
           <div class="step__box"></div>
           <!-- appendSteps-->
@@ -120,14 +118,23 @@
 
             <div class="card__summary">
               <div class="card__summary__confirm">
+                <div class="select__plan at-end">
+                  <p>
+                    <span>Arcade ((time))</span>
+                    <a href="#" class="title__sub">change</a>
+                  </p>
+                  <span class="select__plan__price">$90/yr</span>
+                </div>
 
+                <hr />
 
+                <div></div>
               </div>
 
               <div class="at-end">
                 <span class="title__sub total">Total (per year)</span>
-                 <h2 class="sum">$120/yr</h2>
-                </div>
+                <h2 class="sum">$120/yr</h2>
+              </div>
             </div>
 
             <div class="card__btn two">
@@ -142,10 +149,6 @@
     <div class="hide">
       
 
-      <!-- Step 4 end -->
-
-      <!-- Step 5 start -->
-
       <!-- Thank you! Thanks for confirming your subscription! We hope you have fun -->
       using our platform. If you ever need support, please feel free to email us
       at support@loremgaming.com.
@@ -153,7 +156,7 @@
       <!-- Step 5 end -->
     </div>
 
-    <div class="attribution">
+    <div class="attribution hide">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
