updating the dom

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
+    <meta name="theme-color" content="#473dff">
 
     <link
       rel="icon"
@@ -149,7 +150,7 @@
     <div class="hide">
       
 
-      <!-- Thank you! Thanks for confirming your subscription! We hope you have fun -->
+      Thank you! Thanks for confirming your subscription! We hope you have fun
       using our platform. If you ever need support, please feel free to email us
       at support@loremgaming.com.
 
