looking at the design

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-    <meta name="theme-color" content="#473dff">
+    <meta name="theme-color" content="#473dff" />
 
     <link
       rel="icon"
@@ -121,20 +121,33 @@
               <div class="card__summary__confirm">
                 <div class="select__plan at-end">
                   <p>
-                    <span>Arcade ((time))</span>
+                    <span class="for__plan">Arcade ((time))</span>
                     <a href="#" class="title__sub">change</a>
                   </p>
-                  <span class="select__plan__price">$90/yr</span>
+                  <span class="for__year">$90/yr</span>
                 </div>
 
                 <hr />
 
-                <div></div>
+                <div class="select__result">
+                  <p class="at-end">
+                    <span class="title__sub">Online service</span>
+                    <span class="for__service t">+$10/yr</span>
+                  </p>
+                  <p class="at-end">
+                    <span class="title__sub">Larger storage</span>
+                    <span class="for__storage t">+$20/yr</span>
+                  </p>
+                  <p class="at-end">
+                    <span class="title__sub">Customizable profile</span>
+                    <span class="for__storage t">+$20/yr</span>
+                  </p>
+                </div>
               </div>
 
               <div class="at-end">
                 <span class="title__sub total">Total (per year)</span>
-                <h2 class="sum">$120/yr</h2>
+                <h2 class="sum">$140/yr</h2>
               </div>
             </div>
 
@@ -148,8 +161,6 @@
     </div>
 
     <div class="hide">
-      
-
       Thank you! Thanks for confirming your subscription! We hope you have fun
       using our platform. If you ever need support, please feel free to email us
       at support@loremgaming.com.
