working on calculateSum

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="card__plan">
               <div class="card__plan__select"></div>
 
-              <div class="card__plan__toggle" data-select>
+              <div class="card__plan__toggle">
                 <div>
                   <button class="btn time month choice">Monthly</button>
                   <button class="toggle"></button>
@@ -132,15 +132,15 @@
                 <div class="select__result">
                   <p class="at-end">
                     <span class="title__sub">Online service</span>
-                    <span class="for__service t">+$10/yr</span>
+                    <span class="for__service t" data-plan="service">+$10/yr</span>
                   </p>
                   <p class="at-end">
                     <span class="title__sub">Larger storage</span>
-                    <span class="for__storage t">+$20/yr</span>
+                    <span class="for__storage t" data-plan="storage">+$20/yr</span>
                   </p>
                   <p class="at-end">
                     <span class="title__sub">Customizable profile</span>
-                    <span class="for__storage t">+$20/yr</span>
+                    <span class="for__storage t" data-plan="profile">+$20/yr</span>
                   </p>
                 </div>
               </div>
