working and thinking about what to do next

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
               <div class="card__summary__confirm">
                 <div class="select__plan at-end">
                   <p>
-                    <span class="for__plan">Arcade ((time))</span>
+                    <span class="for__plan">N/A</span>
                     <a href="#" class="title__sub">change</a>
                   </p>
-                  <span class="for__year">$90/yr</span>
+                  <span class="for__year">$0</span>
                 </div>
 
                 <hr />
@@ -132,22 +132,22 @@
                 <div class="select__result">
                   <p class="at-end">
                     <span class="title__sub">Online service</span>
-                    <span class="for__service t" data-plan="service">+$10/yr</span>
+                    <span class="for__service t" data-plan="service">0$</span>
                   </p>
                   <p class="at-end">
                     <span class="title__sub">Larger storage</span>
-                    <span class="for__storage t" data-plan="storage">+$20/yr</span>
+                    <span class="for__storage t" data-plan="storage">0$</span>
                   </p>
                   <p class="at-end">
                     <span class="title__sub">Customizable profile</span>
-                    <span class="for__storage t" data-plan="profile">+$20/yr</span>
+                    <span class="for__storage t" data-plan="profile">0$</span>
                   </p>
                 </div>
               </div>
 
               <div class="at-end">
-                <span class="title__sub total">Total (per year)</span>
-                <h2 class="sum">$140/yr</h2>
+                <span class="title__sub total">Total (N/A)</span>
+                <h2 class="sum">0$</h2>
               </div>
             </div>
 
@@ -168,11 +168,11 @@
       <!-- Step 5 end -->
     </div>
 
-    <div class="attribution hide">
-      Challenge by
+    <div class="attr hide">
+     <p> Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/nonso01">nonso martin</a>.
+      >. Coded by <a href="https://github.com/nonso01" target="_blank">nonso martin</a>.</p>
     </div>
 
     <script src="/dist/main.js"></script>
